force-app/main/default/objects/Course_Group__c.object
<CustomObject>
    <description>Collection of course+course_version references that indicate a student is blocked from enrolling in said courses.</description>
    <fields>
        <fullName>Course_Group__c</fullName>
        <externalId>true</externalId>
        <label>Course Group</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Group is in use</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Managing_Faculty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the org unit on the course group</description>
        <label>Managing Faculty</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Please select a Monash faculty or department</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Faculty</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Monash Organisation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Course Groups</relationshipLabel>
        <relationshipName>Course_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsible_Org_Unit_Code__c</fullName>
        <label>Responsible Org Unit Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Org_Unit_Start_Date__c</fullName>
        <label>Responsible Org Unit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADMTRANSFR</fullName>
                </value>
                <value>
                    <fullName>COMBINED</fullName>
                </value>
                <value>
                    <fullName>EQUIV-CRS</fullName>
                </value>
                <value>
                    <fullName>EXIT-DOCS</fullName>
                </value>
                <value>
                    <fullName>FAMILY</fullName>
                </value>
                <value>
                    <fullName>GOVT-RET</fullName>
                </value>
                <value>
                    <fullName>MILESTONE</fullName>
                </value>
                <value>
                    <fullName>MUM-GS</fullName>
                </value>
                <value>
                    <fullName>PROGRESS</fullName>
                </value>
                <value>
                    <fullName>PUB-DD-REL</fullName>
                </value>
                <value>
                    <fullName>TRANSFER</fullName>
                </value>
                <value>
                    <fullName>VERTICAL</fullName>
                </value>
                <value>
                    <fullName>WESDISPLAY</fullName>
                </value>
                <value>
                    <fullName>XADMIN</fullName>
                </value>
                <value>
                    <fullName>COLLAB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Course Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Type__c</columns>
        <columns>Responsible_Org_Unit_Code__c</columns>
        <columns>Responsible_Org_Unit_Start_Date__c</columns>
        <columns>Course_Group__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>